- Fix CheckinPark theme to have link visible

--- a/RockWeb/Themes/CheckinPark/Styles/_variables.less
+++ b/RockWeb/Themes/CheckinPark/Styles/_variables.less
@@ -1,7 +1,7 @@
 // Colors *show in editor*
 @bg-color:      #85b11c; // The page's background color #color
 @text-color:    #fff; // The text color #color
-@link-color:    #fff; // The link color #color
+@link-color:    #e3151a; // The link color #color
 //--
 @header-text-color:     #fff; // The header text color #color
 @header-font-weight:    @font-weight-bold; // The header text weight
